--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git-Fav</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script type="module" src="js/main.js" defer></script>
 </head>
 <body>
     <div id="app">
         <header>
-            <h1><img src="./src/logo.svg" alt="Logo do GitFav"></h1>
+            <div class="logo-div"><img src="./src/logo.svg" id="logo" alt="Logo do GitFav"></div>
             <div id="search">
                 <label class="sr-only" for="searchbar">Digite o Github username que quer favoritar</label>
                 <input id="searchbar" type="text" placeholder="Digite o Github username que quer favoritar">
