feat: :sparkles: adiciona javascript ao projeto, agora de fato as coisas funcionam

--- a/index.html
+++ b/index.html
@@ -29,52 +29,7 @@
                 </tr>
             </thead>
 
-            <tbody>
-                <tr>
-                    <td class="user">
-                        <img src="https://source.unsplash.com/random?a=1" alt="">
-                        <a href="" target="_blank">
-                            <p>nop-dev</p>
-                            <span>nop-dev</span>
-                        </a>
-                    </td>
-                    <td class="repositories">12</td>
-                    <td class="followers">13</td>
-                    <td>
-                        <button class="remove">Remover</button>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td class="user">
-                        <img src="https://source.unsplash.com/random?a=1" alt="">
-                        <a href="" target="_blank">
-                            <p>nop-dev</p>
-                            <span>nop-dev</span>
-                        </a>
-                    </td>
-                    <td class="repositories">12</td>
-                    <td class="followers">13</td>
-                    <td class="remove">
-                        <button class="remove">Remover</button>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td class="user">
-                        <img src="https://source.unsplash.com/random?a=1" alt="">
-                        <a href="" target="_blank">
-                            <p>nop-dev</p>
-                            <span>nop-dev</span>
-                        </a>
-                    </td>
-                    <td class="repositories">12</td>
-                    <td class="followers">13</td>
-                    <td>
-                        <button class="remove">Remover</button>
-                    </td>
-                </tr>
-            </tbody>
+            <tbody></tbody>
         </table>
     </div>
 </body>
